--- a/src/scss/components/_accordion.scss
+++ b/src/scss/components/_accordion.scss
@@ -11,7 +11,7 @@
     background-position: center center;
     background-size: cover;
     filter: blur(8px) grayscale(0);
-    height: -webkit-fill-available;
+    height: 600px;
     position: absolute;
     width: 100%;
 	z-index: -1;
